authentication using jpa with userDetailsService interface + registration and login using REST requests + customizing exceptions

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-server.port=28852
-spring.jpa.show-sql=true
+#server.port=28852
+#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:file:../service_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.error.include-message=always
+#spring.jackson.mapper.accept_case_insensitive_properties=true
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
